vlib/v/checker/tests/array_map_anon_fn_err_c.vv
fn main() {
	a := [1,2,3,4].map(fn(a string) {})
	println(a)
}
